--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Page Title</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='#'>
+    <script src='#'></script>
+</head>
+<body>
 
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Voluptatibus, at, error, adipisci sunt ipsum quos mollitia dolor quas 
+        eum ullam minus blanditiis explicabo dolore nam. Nemo doloremque repellendus temporibus odio?
+    </p>
+
+    <script>
+        document.write('witaj swiecie');
+
+        const number1 = parseInt(prompt(wprowadź pierwszą liczbę))
+        const number2 = parseInt(prompt(wprowadź drugą liczbę))
+
+        if (isNaN(number1))
+            { document.write('wpisz poprawnie pierwszą liczbę') };
+        else if (isNaN(number2))
+            { document.write('wpisz poprawnie drugą liczbę') };
+        else 
+            { document.write('<p> Wynik: + (number1 + number2) </p>' ) }
+
+    </script>
+
+<!-- while do form -->    
+</body>
+</html>
