--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     <script>
         document.write('witaj swiecie');
 
-        const number1 = parseInt(prompt(wprowadź pierwszą liczbę))
-        const number2 = parseInt(prompt(wprowadź drugą liczbę))
+        const number1 = parseInt(prompt(wprowadź pierwsza liczbe))
+        const number2 = parseInt(prompt(wprowadź druga liczbe))
 
         if (isNaN(number1))
             { document.write('wpisz poprawnie pierwszą liczbę') };
-        else if (isNaN(number2))
-            { document.write('wpisz poprawnie drugą liczbę') };
-        else 
-            { document.write('<p> Wynik: + (number1 + number2) </p>' ) }
+            else if (isNaN(number2))
+                {   document.write('wpisz poprawnie drugą liczbę') };
+            else 
+                { document.write('<p> Wynik: + (number1 + number2) </p>' ) }
 
     </script>
 
